# $Id$

Version 2.3.8 - 2015/09/29 - SVN r1808 (postfixadmin-2.3 branch)
----------------------------------------------------------------
  - fix query to enable/disable alias in edit-mailbox for PostgreSQL (#311)
  - don't prefill username in users/ login on failed logins - fixes (probably
    harmless) XSS
  - fix show_gen_status() to properly escape mail addresses in query (#356)
  - allow MariaDB in Debian package dependencies

Version 2.3.7 - 2014/02/20 - SVN r1651 (postfixadmin-2.3 branch)
----------------------------------------------------------------
  - SECURITY: fix SQL injection in show_gen_status() (CVE-2014-2655)
  - lt.lang, da.lang translation update
  - when enabling/disabling a mailbox, also update the corresponding alias
  - fix creating superadmin in setup.php with MariaDB (more strict SQL)
  - don't trim() mail address to avoid that aliases starting with a space are
    allowed. This fixes http://sourceforge.net/p/postfixadmin/bugs/210/ and
    https://sourceforge.net/p/postfixadmin/feature-requests/113/
  - update regex in check_domain() to support new, longer TLDs like .international
  - mark vacation_notification.notified field as latin1 to avoid overlong index
  - vacation.pl: encode subject
  - vacation.pl: disable use of TLS by default due to a bug in Mail::Sender 0.8.22
    (you can re-enable it with $smtp_tls_allowed)

Version 2.3.6 - 2013/01/02 - SVN r1417 (postfixadmin-2.3 branch)
----------------------------------------------------------------

  - display domain and mailbox description with correct encoding
  - fix footer link
  - focus username input field in login form
  - fix double inclusion of config.inc.php in setup.php
  - fix bool and date handling in fetchmail

Version 2.3.5 - 2012/01/16 - SVN r1335 (postfixadmin-2.3 branch)
----------------------------------------------------------------

  - fix SQL injection in pacrypt() (if $CONF[encrypt] == 'mysql_encrypt')